[package]
name = "change_flare"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
ureq = {version = "2.10.1", features = ["json"]}
serde = { version = "1.0.210", features = ["derive"] }
stunclient = "0.4.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
mockito = "1.2"
serde_json = "1.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unreachable = "deny"